--- a/styles/home.css
+++ b/styles/home.css
@@ -13,9 +13,14 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  display: none;
+  display: flex;
   border: 2px ridge;
   font-size: larger;
+}
+
+#myfood {
+  background-color: rgb(82, 186, 151);
+  border: "2px solid white";
 }
 
 .food-navbar-element {
@@ -37,7 +42,7 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  display: flex;
+  display: none;
   border: 2px ridge;
   font-size: larger;
 }
