--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,10 @@ body {
   height: 40px;
   display: block;
 }
-#navbarList {
+
+.navbarList {
   display: inline;
-  padding: 25px 16px;
-  margin-left: 15px;
+  margin-left: 25px;
 }
 
 #navbar #navbarElm:hover {
@@ -23,9 +23,9 @@ body {
   opacity: 0.7;
 }
 
-#navbarElm {
+.navbarElm {
   color: black;
-  font-size: 30px;
+  font-size: 35px;
   text-decoration: none;
 }
 
