--- a/styles/home.css
+++ b/styles/home.css
@@ -41,3 +41,27 @@
   border: 2px ridge;
   font-size: larger;
 }
+
+.myhome-home-summary {
+  display: block;
+  width: 600px;
+  height: 480px;
+  margin: auto;
+  margin-top: 30px;
+  border: 2px solid;
+  border-radius: 15px;
+  background: transparent;
+  padding: 20px;
+}
+
+.add-button {
+  width: 400px;
+  padding: 10px;
+  transform: translate(5%);
+  background: aquamarine;
+  border-radius: 25px;
+}
+
+.add-button:hover {
+  background: rgb(58, 149, 119);
+}
