--- a/styles/register.css
+++ b/styles/register.css
@@ -6,6 +6,7 @@
   margin-top: 40px;
   margin-left: 50px;
   margin-right: 10px;
+  backdrop-filter: blur(5px);
 }
 
 .goals .goals-list {
@@ -47,4 +48,5 @@
   margin-top: 40px;
   margin-left: 50px;
   margin-right: 10px;
+  backdrop-filter: blur(5px);
 }
